<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enter"
        app:layout_constraintVertical_bias="0.97"
        tools:layout_editor_absoluteX="1dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/clear"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#46657E"
                android:onClick="clearBtn"
                android:text="@string/clear"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <Button
                android:id="@+id/parenthesis"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="parenBtn"
                android:text="@string/p" />

            <Button
                android:id="@+id/exponent"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="powerBtn"
                android:text="@string/exponent" />

            <Button
                android:id="@+id/divide"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#AC7070"
                android:onClick="divBtn"
                android:text="@string/divide"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/seven"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="sevenBtn"
                android:text="@string/seven" />

            <Button
                android:id="@+id/eight"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="eightBtn"
                android:text="@string/eight" />

            <Button
                android:id="@+id/nine"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="nineBtn"
                android:text="@string/nine" />

            <Button
                android:id="@+id/multiply"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#AC7070"
                android:onClick="mulBtn"
                android:text="@string/multiply"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/four"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="fourBtn"
                android:text="@string/four" />

            <Button
                android:id="@+id/five"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="fiveBtn"
                android:text="@string/five" />

            <Button
                android:id="@+id/six"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="sixBtn"
                android:text="@string/six" />

            <Button
                android:id="@+id/sub"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#AC7070"
                android:onClick="subBtn"
                android:text="@string/sub"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/one"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="oneBtn"
                android:text="@string/one" />

            <Button
                android:id="@+id/two"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="twoBtn"
                android:text="@string/two" />

            <Button
                android:id="@+id/three"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="threeBtn"
                android:text="@string/three" />

            <Button
                android:id="@+id/add"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#AC7070"
                android:onClick="addBtn"
                android:text="@string/add"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/plusminus"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#AC7070"
                android:onClick="plusMinusBtn"
                android:text="@string/plusMinus"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Button
                android:id="@+id/zero"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="zeroBtn"
                android:text="@string/zero" />

            <Button
                android:id="@+id/point"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:onClick="pointBtn"
                android:text="@string/point"
                android:textStyle="bold" />

            <Button
                android:id="@+id/equals"
                android:layout_width="0dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/buttoncustomize"
                android:backgroundTint="#557E46"
                android:onClick="eqBtn"
                android:text="@string/equals"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

    <EditText
        android:id="@+id/enter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/display"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="false"
        android:inputType="none"
        android:textSize="36sp"
        android:textAlignment="textEnd"
        tools:ignore = "LabelFor"/>

    <ImageButton
        android:layout_width="91dp"
        android:layout_height="45dp"
        android:layout_margin="5dp"
        android:background="@drawable/buttoncustomize"
        android:backgroundTint="#912E2E"
        android:contentDescription="@string/backspace"
        android:onClick="backBtn"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagebutton" />

</androidx.constraintlayout.widget.ConstraintLayout>